# ee556-hw1

./: Carlos Part 3 - Stochastic gradient methods.ipynb  Lan_Part 1 - Constrained Optimization.ipynb  Lan_Part 4 - Proximal methods.ipynb  Part 1 - Constrained Optimization Daniil.ipynb  Part 1 - Theory.ipynb  Part 1 - Theory_1_1.ipynb  Part 2 - First order methods.ipynb  Part 2 - K-means with SDP Daniil.ipynb  Part 3 - SAM Daniil.ipynb  Part 3 - Stochastic gradient methods.ipynb  Part 4 - Proximal methods Daniil.ipynb  Part 4 - Proximal methods.ipynb  Part-1-Theoretical recap - Hw2 - Daniil.ipynb  Part-1-Theoretical recap.ipynb  Part-2-GAN Carlos.ipynb  Part-2-GAN.ipynb  Part-2-GAN_ Lan.ipynb  Part-2-GAN__.ipynb  Part-2-GAN___.ipynb  README.md  pyproject.toml
Handout 1 (Not Graded)-20240912/: Handout_1.ipynb
Handout 2 (Not graded)/HandoutNotebook/: Handout 2.ipynb
Handout 2 (Not graded)/HandoutNotebook/.ipynb_checkpoints/: Handout 2-checkpoint.ipynb
Handout 2 (Not graded)/HandoutNotebook/.virtual_documents/: Handout 2.ipynb
Handout 2 (Not graded)/HandoutNotebook/Sophia/: __init__.py
Homework1/: Part 1 - Theory.ipynb
hw3_carlos/: Part 1 - Constrained Optimization.ipynb  Part 2 - K-means with SDP.ipynb  Part 3 - SAM.ipynb
hw3_daniil/: Part 1 - Constrained Optimization Daniil.ipynb  Part 2 - K-means with SDP Daniil.ipynb
hw3_final/: Part 1 - Constrained Optimization.ipynb  Part 2 - K-means with SDP.ipynb  Part 3 - SAM.ipynb
