[project]
name = "cs556"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "schedulefree>=1.2.7",
    "torch>=2.4.1",
    "tqdm",
]
